Closed Bug 1199080 Opened 9 years ago Closed 9 years ago

IonMonkey: MIPS32: Fix treating saved frame bit as part of the frame type

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: hev, Assigned: hev)

Details

Attachments

(1 file)

python2 ./jit_test.py -f --tbpl /tmp/js.32 ion/bug1195590.js                                         
[2|0|0|0]  33% =================>                                     |   1.1s
Exit code: -5
FAIL - ion/bug1195590.js
[4|1|0|0]  83% ============================================>          |   1.8s
Exit code: -5
FAIL - ion/bug1195590.js
[4|2|0|0] 100% ======================================================>|   2.1s
Assignee: nobody → r
Attachment #8653263 - Flags: review?(branislav.rankov)
Attachment #8653263 - Flags: review?(nicolas.b.pierron)
Attachment #8653263 - Flags: review?(nicolas.b.pierron) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/19e754769d7b
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: