Bug 1199080 - IonMonkey: MIPS32: Fix treating saved frame bit as part of the frame type. r=nbp